# igvc_sim_ws

./: README.md  expanded.urdf  frames_2026-02-13_01.59.06.gv  frames_2026-02-13_01.59.51.gv  test.urdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/igvc_bringup/share/igvc_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/igvc_bringup/share/igvc_bringup/cmake/: igvc_bringupConfig.cmake
install/igvc_bringup/share/igvc_bringup/launch/: gazebo.launch.py  view_robot.launch.xml
install/igvc_description/share/igvc_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/igvc_description/share/igvc_description/cmake/: igvc_descriptionConfig.cmake
install/igvc_description/share/igvc_description/urdf/: base.xacro  gazebo_plugins.xacro  robot.xacro  sensors.xacro  wheels.xacro
install/igvc_gazebo/share/igvc_gazebo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/igvc_gazebo/share/igvc_gazebo/worlds/: igvc.world  (+1 more)
log/: latest_build
src/igvc_bringup/: CMakeLists.txt
src/igvc_bringup/launch/: gazebo.launch.py  view_robot.launch.py
src/igvc_description/: CMakeLists.txt
src/igvc_description/urdf/: base.xacro  gazebo_plugins.xacro  robot.urdf  robot.xacro  sensors.xacro  wheels.xacro
src/igvc_gazebo/: CMakeLists.txt
src/igvc_gazebo/worlds/install/: setup.sh
src/igvc_gazebo/worlds/log/: latest_build
(+4 files in other folders)
