<?xml version="1.0"?>
<package format="3">

  <name>igvc_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for IGVC robot</description>

  <maintainer email="bansaldhruv1404@gmail.com">dhruv-bansal</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
